# HPlayer2

./: .gitignore  BLUETOOTH  CONTRIBUTING.md  HPlayer2  Pipfile  README.md  ROADMAP.md  TODO  UPDATE  datesync  hplayer2  hplayer2-kill  hplayer2@.service  install.sh  launcher.py  pyproject.toml  zyretest.py  zyretestsimple.py
.github/: dependabot.yml
core/: audioscope.py  default.py  gadagne.py  hpod.py  idea.py  kplayer.py  kxkm.py  looper.py  module.py
core/engine/: audiohw.py  chaser.py  conduite.py  drifter.py  filemanager.py  hplayer.py  imgen.py  network.py  playlist.py  sampler.py  settings.py
core/interfaces/: __init__.py  audiohub.py  base.py  btserial.py  dmx.py  gpio.py  hcon.py  http.py  http2.py  irremote.py  keyboard.py  keypad.py  kmsg.py  kyre.py  midictrl.py  mqtt.py  mtc.py  nfc.py  nowde.py  osc.py  pyre.py  radar.py  regie.py  schedule.py  serial.py  serialbase.py  teleco.py  teleco2.py  ticker.py  wallclock.py  zyre (copy).py  zyre.py
core/overlays/: __init__.py  base.py  rpifade.py  rpifader.py
core/players/: __init__.py  base.py  gst.py  jp.py  midi.py  mpv.py  mpvstream.py  omx.py  videonet.py
docs/: COMPLETION.md  architecture.md  interfaces.md  profiles.md  sync.md
extra/: biennale26-bringup.md  biennale26-fleet.md  biennale26-n100-upgrade-plan.md  boostrap-buster-raspios-3B+.sh
extra/bench/: README.md  bench-golden.jsonl  bench-mini.jsonl  bench-mpv.py
extra/rpi-config/: _netctl-wlan0  cmdline.txt  config.txt  dynhost.service  hostname  launcher.service  netctl-eth0  splashscreen.service  usb-automount@.service
extra/test/: fader.py  radar_mockdevice.py  watchtest.py  (+2 more)
install/: install_debian.sh
lua/: fullscreen.lua~  welcome.lua
players/: base.py  mpv.py
profiles/: 1watt.py  24-trames.py  25-annatv.py  25-kxkm.py  25-test.py  26-bandit.py  2watt.py  3watt.py  4watt.py  _dev.py  anna.py  audioscope.py  b24-midi-backup.py  biennale.py  biennale24-midi.py  biennale24-midi2.py  biennale24-rtc.py  biennale24.py  biennale26-radar.py  biennale26-wall.py  bloffique.py  chalon.py  chrd.py  ciconia.py  decaz.py  default.py  ecel.py  espremote.py  etendard.py  flipper.py  gadagne.py  gadagne19-sync.py  gadagne19.py  gadagne21.py  gadagne22-triptik.py  groupef1.py  hidensee.py  hidesee.py  hpod.py  insolite.py  (+17 more)
python/: HPlayer2.py  default.py  hplayer2.py  kxkm.py  mpv.py  osc.py  player.py
scripts/: _hplayer2  asound.conf-n100  asound.conf-rpi3  bootstrap_native_deps.py  build.sh  build_arch.sh  build_debian.sh  color.sh  hplayer2-completion.bash  install_dependencies.sh  install_macos.sh  install_mpv-22.sh  install_mpv.sh  install_remote.sh  install_xbian.sh  jpegconvert.sh  remote_build.sh  remote_install.sh  requirements.txt  splash_boot.sh  update_gadagne.sh  wait-display.sh
tests/: desk_audiohub.py  desk_conduite.py  desk_dmx_offline.py  desk_wallsync.py  test_audiohub.py  test_conduite.py  test_dmx_offline.py  test_hplayer.py  test_interfaces.py  test_midictrl.py  test_mpv.py  test_network.py  test_playlist.py  test_settings.py  test_wallsync.py
upgrades/: apply.sh  do.sh
utils/: start-mpv.sh
(+144 files in other folders)
